--- a/src/css/theme.scss
+++ b/src/css/theme.scss
@@ -138,11 +138,11 @@
   --color-surface-high: hsl(244, 100%, 97%);
   --color-surface-mid: hsl(240 25% 96%);
   --color-surface-low: hsl(240 25% 94%);
+  --color-surface-lowest: #ffffff;
   --color-on-surface: #1b1b1f;
   --color-brand-hover: #5753d0;
   --color-on-primary-container: #030064;
   --color-surface-primary-container: #e0dfff;
-  --color-surface-lowest: #ffffff;
   --color-brand-active: #4440bf;
   --color-border-outline: #767680;
   --color-border-outline-variant: #c5c5d0;
@@ -234,13 +234,14 @@
 
     --color-logo-text: #e2dfff;
 
-    --color-surface-high: #31303b;
-    --color-surface-low: #232329;
+    --color-surface-high: hsl(245, 10%, 21%);
+    --color-surface-low: hsl(240, 8%, 15%);
+    --color-surface-mid: hsl(240 6% 10%);
+    --color-surface-lowest: hsl(0, 0%, 7%);
     --color-on-surface: #e3e3e8;
     --color-brand-hover: #bbb8ff;
     --color-on-primary-container: #e0dfff;
     --color-surface-primary-container: #403e6a;
-    --color-surface-lowest: #121212;
     --color-brand-active: #d0ccff;
     --color-border-outline: #8e8d9c;
     --color-border-outline-variant: #46464f;
